# win32_emoji_draw

./: CMakeLists.txt  README.md  dwrite_ver.cpp  gdi_ver.cpp  resource.rc
res/: Manifest_1.manifest
